<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/met_1"
    android:weightSum="4"

    tools:context=".MainActivity">

    <LinearLayout
        android:background="#99000000"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingTop="130dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/metro_india"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <LinearLayout
            android:background="#B3000000"
            android:orientation="vertical"
            android:layout_margin="30dp"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_textColorHint="@android:color/white"
                app:met_baseColor="@android:color/white"
                app:met_primaryColor="@android:color/white"
                android:drawableRight="@drawable/ic_email"
                app:met_iconPadding="0dp"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_textColorHint="@android:color/white"
                app:met_baseColor="@android:color/white"
                app:met_primaryColor="@android:color/white"
                android:drawableRight="@drawable/ic_password"
                app:met_iconPadding="0dp"
                />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/btn_login"
            android:background="#431F63"
            android:text="LOGIN"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_create_account"
            android:text="@string/create_account"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_margin="22dp"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/pb_loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>






</LinearLayout>