<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/met_1"
    android:weightSum="4"
    >

    <LinearLayout
        android:background="#99000000"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="Metro India"
            android:textSize="36dp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
        android:background="#B3000000"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:met_textColorHint="@android:color/white"
            app:met_baseColor="@android:color/white"
            app:met_primaryColor="@android:color/white"
            android:drawableRight="@drawable/ic_email"
            app:met_iconPadding="0dp"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_fname"
            android:hint="@string/f_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:met_textColorHint="@android:color/white"
            app:met_baseColor="@android:color/white"
            app:met_primaryColor="@android:color/white"
            android:drawableRight="@drawable/ic_user"
            app:met_iconPadding="0dp"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_lname"
            android:hint="Last Name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:met_textColorHint="@android:color/white"
            app:met_baseColor="@android:color/white"
            app:met_primaryColor="@android:color/white"
            android:drawableRight="@drawable/ic_user"
            app:met_iconPadding="0dp"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_uname"
            android:hint="Username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:met_textColorHint="@android:color/white"
            app:met_baseColor="@android:color/white"
            app:met_primaryColor="@android:color/white"
            android:drawableRight="@drawable/ic_user"
            app:met_iconPadding="0dp"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:met_textColorHint="@android:color/white"
            app:met_baseColor="@android:color/white"
            app:met_primaryColor="@android:color/white"
            android:drawableRight="@drawable/ic_password"
            app:met_iconPadding="0dp"
            />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/btn_register"
            android:background="#431F63"
            android:text="SIGN UP"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>





        <TextView
            android:id="@+id/txt_login_account"
            android:text="@string/log_in"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_margin="22dp"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_gravity="center"
        android:visibility="invisible"
        android:id="@+id/pb_loading_indicator1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>